--- a/src/internal.properties
+++ b/src/internal.properties
@@ -7,8 +7,8 @@
 #
 
 app.version.number=7.7.0
-git.revision=working copy
-app.edition.verbose=Enterprise
+git.revision=2e23fc054b65b154bfb4f1efdfd4fb00c30ce69c
+app.edition.verbose=Community
 app.version=EJBCA ${app.version.number} ${app.edition.verbose} (${git.revision})
 community.edition.verbose=Enterprise
 community.version=EJBCA ${app.version.number} ${community.edition.verbose} (${git.revision})
