Disable node tracking, enable dynamic configuration.
Allow some configuration properties to be overridden by files in
/etc/ejbca/conf/XXX.properties.

--- a/bitnami-custom/conf/ejbca.properties
+++ b/bitnami-custom/conf/ejbca.properties
@@ -33,7 +33,7 @@ ejbca.productionmode=true
 # Currently this works for most values in ejbca.properties, web.properties, cmp.properties, externalra-caservice.properties, ocsp.properties, extendedkeyusage.properties, jaxws.properties, xkms.properties
 #
 # Default: false
-#allow.external-dynamic.configuration=false
+allow.external-dynamic.configuration=true
 
 # ------------ Basic CA configuration ---------------------
 # Most CA options are configured in cesecore.properties, but some EJBCA-
@@ -74,7 +74,7 @@ ca.cmskeystorepass=75b6cb79ce3672a540715eed04a9c13f7788fd07
 # In environments that has many short-lived instances with different hostnames this should be disabled.
 #
 # Default: true
-#ejbca.nodetracking=true
+ejbca.nodetracking=false
 
 #------------------- EJBCA Healthcheck settings -------------
 # Specifies the basic settings of the EJBCA Healthcheck servlet
